--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clean": "rm -fr ./dist",
     "git:push": "git push --follow-tags origin main",
     "release": "yarn version:patch && yarn git:push",
+    "test": "ava",
     "version:patch": "standard-version",
     "yui": "yarn upgrade-interactive"
   },
