--- a/applab.config.json
+++ b/applab.config.json
@@ -7,10 +7,10 @@
       "bundle": true,
       "codeSplitting": true,
       "define": {},
-      "excludeLibs": [],
+      "excludeLibs": ["compression"],
       "format": "esm",
       "inputScripts": ["src/index.ts"],
-      "minify": true,
+      "minify": false,
       "platform": "node",
       "sourceMap": true,
       "target": "esnext",
@@ -23,7 +23,7 @@
       "buildTypes": true,
       "bundle": true,
       "define": {},
-      "excludeLibs": [],
+      "excludeLibs": ["compression"],
       "format": "cjs",
       "inputScripts": ["src/index.ts"],
       "minify": true,
