--- a/applab.config.json
+++ b/applab.config.json
@@ -7,7 +7,7 @@
       "bundle": true,
       "codeSplitting": true,
       "define": {},
-      "excludeLibs": ["compression", "express"],
+      "excludeLibs": ["compression", "express", "multer"],
       "format": "esm",
       "inputScripts": ["src/index.ts"],
       "minify": false,
@@ -23,7 +23,7 @@
       "buildTypes": true,
       "bundle": true,
       "define": {},
-      "excludeLibs": ["compression", "express"],
+      "excludeLibs": ["compression", "express", "multer"],
       "format": "cjs",
       "inputScripts": ["src/index.ts"],
       "minify": true,
