--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Simple API wrapper around Express server",
   "author": "Steven Bennett <steven@srclaunch.com>",
   "license": "MIT",
-  "version": "0.1.32",
+  "version": "0.1.33",
   "engines": {
     "node": ">=16"
   },
@@ -91,6 +91,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4"
   }
 }
