Quick release - patch

--- a/applab.config.json
+++ b/applab.config.json
@@ -7,7 +7,7 @@
       "bundle": true,
       "codeSplitting": true,
       "define": {},
-      "excludeLibs": ["@srclaunch/logger", "compression", "express", "multer"],
+      "excludeLibs": ["compression", "express", "multer"],
       "format": "esm",
       "inputScripts": ["src/index.ts"],
       "minify": true,
@@ -23,7 +23,7 @@
       "buildTypes": true,
       "bundle": true,
       "define": {},
-      "excludeLibs": ["@srclaunch/logger", "compression", "express", "multer"],
+      "excludeLibs": ["compression", "express", "multer"],
       "format": "cjs",
       "inputScripts": ["src/index.ts"],
       "minify": true,
