--- a/applab.config.json
+++ b/applab.config.json
@@ -7,13 +7,7 @@
       "bundle": true,
       "codeSplitting": true,
       "define": {},
-      "excludeLibs": [
-        "@srclaunch/exceptions",
-        "@srclaunch/logger",
-        "compression",
-        "express",
-        "multer"
-      ],
+      "excludeLibs": ["chalk", "compression", "express", "multer"],
       "format": "esm",
       "inputScripts": ["src/index.ts"],
       "minify": true,
@@ -29,13 +23,7 @@
       "buildTypes": true,
       "bundle": true,
       "define": {},
-      "excludeLibs": [
-        "@srclaunch/exceptions",
-        "@srclaunch/logger",
-        "compression",
-        "express",
-        "multer"
-      ],
+      "excludeLibs": ["chalk", "compression", "express", "multer"],
       "format": "cjs",
       "inputScripts": ["src/index.ts"],
       "minify": true,
