Quick release - patch

--- a/.github/workflows/deploy-package.yml
+++ b/.github/workflows/deploy-package.yml
@@ -44,7 +44,7 @@ jobs:
           path: dist
 
       - name: Run tests
-        run: yarn test
+        run: yarn test:coverage
 
       - name: Publish package to NPM
         run: yarn npm publish
