--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "clean": "rm -fr ./dist",
     "git:push": "git push --follow-tags origin main",
     "qr": "yarn build && git add . && git commit -m \"Quick release - patch\" && yarn release",
-    "release": "yarn version:patch && yarn git:push",
+    "release": "yarn test:coverage && yarn version:patch && yarn git:push",
     "test": "yarn ava",
     "test:coverage": "yarn c8 ava",
     "test:watch": "yarn ava --watch",
